--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>This is Joe Donahoe's GitHub page.</h1>
+<!doctype html>
+<html>
+	<head>
+		<title>Joe Donahoe on GitHub</title>
+	</head>
+	<body>
+		<h1>Joe Donahoe</h1>
+
+	</body>
+</html>
