--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
-<!doctype html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 	<head>
 		<title>Joe Donahoe on GitHub</title>
-		<style type="text/css">
-		<!--
-		body { font-family: verdana, arial, sans-serif;	width: 700px; }
-
-		.title { font-size: x-large; margin-top: 20px; background-color: green; color: white; width: 100%; padding: 5px; }
-		.subtitle { font-size: x-small; margin-bottom: 40px; }
-
-		.group { font-size: large; margin-top: 40px; margin-bottom: 10px; }
-
-		div.repo { }
-		div.repoTitle { font-size: small; margin-bottom: 5px; font-weight: bold; }
-		div.repoNote { font-size: x-small; margin-bottom: 10px; }
-		-->
-		</style>
+		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 	<body>
-		<div class="title">Joe Donahoe</div>
-		<div class="subtitle">SQL and Tableau Developer, learning R and the Angular JS stack.<br>
-		I also harbor a deep affection for Classic ASP and minimalist design.<br>
-		This is a collection of some things I've built.</div>
+		<h1>Joe Donahoe</h1>
+		<h2>
+			<a href="index.html">LOG</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="stuff.html">STUFF</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="about.html">ABOUT</a>
+		</h2>
 
+		<h4>2015.09.14 Let's Get This Going</h4>
+		<p>I decided the other day that I needed a place where I can put the kind-of-useful stuff
+		I build as I'm learning new things and practicing things I think I know.  I tried
+		WordPress, but I didn't really want a blog.  I just wanted a chronological list (this page) and a
+		portfolio (the <a href="stuff.html">Stuff</a> page).</p>
+		<p>So this is that.  More to come.</p>
+		<p>Some design notes:</p>
+		<ul>
+		<li>Since I like simplicity, control, and full understanding, the HTML here is completely manual and edited in TextPad.</li>
+		<li>I un-div'd this page from an earlier document to clean it up.</li>
+		<li>I'm going with cornflower blue because it looks okay with the default HTML link color.  I prefer to use pre-built constants instead of hunting for the perfect hexadecimal code that I'll need to document anyway.</li>
+		<li>I learned that I'm not supposed to put an &lt;ul&gt; or an &lt;ol&gt; inside of a &lt;p&gt;.  Stack Overflow to the <a href="http://stackoverflow.com/questions/5681481/should-ol-ul-be-inside-p-or-outside">rescue</a>.</li>
+		<li>I also prefix my working files with the date in YYYY.MM.DD format.  As in "2015.08.15 Research That Weird Sales Order.sql".  So I'm using the same format here.</li>
+		</ul>
+		<p>
+		On that last point, I am writing with the expectation that I am 95% of my own audience.  And 2% of the audience is seeing how I work.  The other 3% is probably my mother.
+		</p>
+
+		<!-- OLD STUFF -->
+		<!--
 		<div class="group">Tableau</div>
 
 		<div class="repo">
@@ -49,6 +58,7 @@
 			<div class="repoTitle"><a href="https://github.com/joedonahoe/ProgrammingAssignment3">Programming Assignment #3 for R Programming Class, April 2014</a></div>
 			<div class="repoNote">A function written for <a href="https://www.coursera.org/course/rprog">R Programming</a> on Coursera.  This is reworked code that was original developed in <a href="https://www.coursera.org/course/compdata">Computing for Data Analysis</a>.  Written in R.</div>
 		</div>
+		-->
 
 	</body>
 </html>
