note on 9/15 post about github.io update time

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<li>I dropped in my changes, and asked Git how things looked using <code>git status</code>.  Git said I had one new file (the CSS file) and one modified file (the index.html file).</li>
 		<li>I did <code>git add style.css</code> to add the new file to the local repo.</li>
 		<li>Then I did a <code>git commit -m "2015.09.14"</code> because I'm being lazy at writing check-in comments.  However, that only picked up the new file.  I had to do <code>git commit -a -m "2015.09.14"</code> to also pick up the changed file.</li>
-		<li>Finally, <code>git push origin master</code> and my changes were visible on this site due to the magic of github.io.</li>
+		<li>Finally, <code>git push origin master</code> and my changes were visible on this site in about 90 seconds due to the magic of github.io.</li>
 		</ol>
 
 		<h4>2015.09.14 Let's Get This Going</h4>
