--- a/index.html
+++ b/index.html
@@ -12,6 +12,47 @@
 			<a href="about.html">ABOUT</a>
 		</h2>
 
+		<h4>2015.09.25</h4>
+		<p>The <a href="http://tc15.tableau.com/">2015 Tableau Conference</a> is next month!</p>
+		<p>Tableau is usually great about publishing the raw data for the conference sessions, and they
+		<a href="http://tc15.tableau.com/data">did it</a> for this year's conference.  I just noticed the web connector
+		data source--that might be fun to play with.</p>
+		<p>I've been to two previous conferences--Seattle in 2010 and San Diego in 2012.
+		The Tableau conferences are always a mess of sessions.  There are many sessions in a few time slots.  Many
+		are interesting.  Some are done by Tableau community celebrities.  Some apply directly to the day job, and you
+		have to go, since the boss is paying the bill.</p>
+		<p>The tough part about the schedule is picking the sessions and time slots that best fit with my priorities.
+		The viz below lets the user browse the offerings, prioritize, then do some further organization.</p>
+		<p>The viz is also available <a href="https://public.tableau.com/views/TableauConf2015/Intro?:embed=y&:display_count=yes&:showTabs=y&:toolbar=no&:showVizHome=no#9">here</a>.</p>
+		<p>
+			<script
+				type='text/javascript'
+				src='https://public.tableau.com/javascripts/api/viz_v1.js'>
+			</script>
+			<!--<div class='tableauPlaceholder' style='width: 1024px; height: 720px;'>-->
+			<div class='tableauPlaceholder' style='width: 800px; height: 600px;'>
+				<noscript>
+					<a href='http:&#47;&#47;joedonahoe.github.io'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;TableauConf2015&#47;Intro&#47;1_rss.png' style='border: none' /></a>
+				</noscript>
+				<object class='tableauViz' width='800' height='600' style='display:none;'>
+					<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+					<param name='site_root' value='' />
+					<param name='name' value='TableauConf2015&#47;Intro' />
+					<param name='tabs' value='yes' />
+					<param name='toolbar' value='no' />
+					<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;TableauConf2015&#47;Intro&#47;1.png' />
+					<param name='animate_transition' value='yes' />
+					<param name='display_static_image' value='yes' />
+					<param name='display_spinner' value='yes' />
+					<param name='display_overlay' value='yes' />
+					<param name='display_count' value='yes' />
+					<param name='showVizHome' value='no' />
+					<param name='showTabs' value='y' />
+					<param name='bootstrapWhenNotified' value='true' />
+				</object>
+			</div>
+		</p>
+
 		<h4>2015.09.15 Re-Learning GitHub</h4>
 		<p>My version control usage at my current job is, um, unconventional.  And by "unconventional", I
 		mean I get email approvals, I back changed code up, and then I modify production manually.  My
