--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<a href="about.html">ABOUT</a>
 		</h2>
 
-		<h4>2015.09.25</h4>
+		<h4>2015.09.25 Tableau Conference 2015</h4>
 		<p>The <a href="http://tc15.tableau.com/">2015 Tableau Conference</a> is next month!</p>
 		<p>Tableau is usually great about publishing the raw data for the conference sessions, and they
 		<a href="http://tc15.tableau.com/data">did it</a> for this year's conference.  I just noticed the web connector
