blogitem about the nav change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 		</h3>
 
 		<div class="blogitem 201510 admin javascript">
-			<h4>2015.10.02 Tags On This Page <span class="tag">javascript</span></h4>
+			<h4>2015.10.05 Tags On This Page, Part II <span class="tag">javascript, admin</span></h4>
+			<p>Yeah, it's better doing in-page JavaScript to filter the tags.  The next big change to this site
+			will be to move the title and links to the side.  Panes are annoying, so it won't be panes (both espn.com
+			and si.com are doing this awkwardly).  It really should be a div that hovers over empty space.</p>
+			<p>And I need to write the Stuff and About pages.</p>
+		</div>
+
+		<div class="blogitem 201510 admin javascript">
+			<h4>2015.10.02 Tags On This Page <span class="tag">javascript, admin</span></h4>
 			<p>I mentioned earlier that this site is hand-made HTML and CSS.  Now I've added JavaScript to do tagging
 			functionality.  It isn't a great implementation because selecting a tag causes a full-page reload.  That's
 			not great with the embedded Tableau Public workbooks--you're looking for "git" items, but the Tableau embeds
