added about.html and stuff.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 		<script language="javascript" type="text/javascript" src="showhide.js"></script>
 	</head>
-	<body onLoad="showHide();">
+	<body>
 		<h1>Joe Donahoe</h1>
 		<h2>
 			<a href="index.html">LOG</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -51,9 +51,7 @@
 			The viz below lets the user browse the offerings, prioritize, then do some further organization.</p>
 			<p>The viz is also available <a href="https://public.tableau.com/views/TableauConf2015/Intro?:embed=y&:display_count=yes&:showTabs=y&:toolbar=no&:showVizHome=no#9">here</a>.</p>
 			<p>
-				<script
-					type='text/javascript'
-					src='https://public.tableau.com/javascripts/api/viz_v1.js'>
+				<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'>
 				</script>
 				<!--<div class='tableauPlaceholder' style='width: 1024px; height: 720px;'>-->
 				<div class='tableauPlaceholder' style='width: 800px; height: 600px;'>
