2018 Reboot (a little bit more text)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li>And run <code>git status</code>.  Nothing has changed.  You can also run "dir -all" to see the files' current state.</li>
                 <li>Make some changes.  For me, I used "rm *" to throw away all of the old stuff.  Then I created a new "index.html" in the folder.</li>  
                 <li>Run <code>git status</code>, and I have a lot of changes to send to the server.</li>
+                <li>Then I ran <code>git commit -a -m "2018 Reboot"</code> and <code>git push origin master</code>.  
                 </ol>
             </p>
         </div>
@@ -36,7 +37,7 @@
             But just Tableau for now.  And I'll give myself a time limit so I don't have much time to play and polish things.  
             I will mostly work off of Andy Kriebel's Makeover Monday columns over on <a href="http://www.vizwiz.com">VizWiz</a>.  
             If you have a moment, I would recommend reading Mr. Kriebel's blog.  
-            This little site is served up on github.io, and built using handwritten HTML.
+            This little site is served up on github.io, and built using handwritten HTML in Visual Studio Code.
             </p>
         </div>
     </body>
