--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         The data is by factory/country/city, with some percentages at the record level.  
         I used those percentages to get totals, then used those totals to aggregate up.  
         The by-factory data was a little interesting (example, one Vietnamese factory has a lot more migrant workers than the others).  
-        It was also tempting to use a map with the geographic data (news flash: Nike a lot of factories in China).  
+        It was also tempting to use a map with the geographic data (news flash: Nike has a lot of factories in China).  
         </p>
         <p>
         But the best simply rendering of the data was below.  By setting the axis to the same scale (default in 9.1, not in 2018.2), we can see where the workers are.  I would like a little more time with this, but today's time is up.  
