--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <title>Joe Donahoe</title>
     <style>
     <!--
-        body { font-family: verdana; max-width: 800px; }
-        h1 { margin-bottom: 0px; } /* title */
+        body { font-family: verdana; max-width: 800px; margin: auto; /* to center */ }
+        h1 { margin-bottom: 0px; margin-top: 50px; } /* title */
         h2 { font-size: smaller; margin-top: 0px; } /* links */
         h3 { margin-top: 50px; } /* each article's heading */
         p { font-weight: normal; } /* text for each article */
@@ -25,6 +25,7 @@
         </p>
         <p>
         But the best simply rendering of the data was below.  By setting the axis to the same scale (default in 9.1, not in 2018.2), we can see where the workers are.  I would like a little more time with this, but today's time is up.  
+        In conclusion, I think mine isn't that great.  Maybe a good one to rework someday.  
         </p>
         <p>
                 <div class='tableauPlaceholder' id='viz1536084609280' style='position: relative'><noscript><a href='#'>
