--- a/index.html
+++ b/index.html
@@ -19,6 +19,31 @@
 
 
         <div class="article">
+        <a id="20180907R&D"></a>
+        <h3>2018.09.07 :: Worldwide R&D Spending</h3> 
+        <p>
+        This is another post from Mr. Kriebel's <a href="">blog</a>.  
+        It started with a horribly chart-junky viz from another blog, and Andy focused on the US portion of that.  
+        He used dots, which I thought was a little too cool.  
+        Instead, I used bars to show that global spending is rising, and US spending is mostly flat.  
+        Because comparing the US portion to the global portion is visually difficult, I added the US percentage of the whole as a line.  
+        </p>
+        <p>
+        <!-- Tableau Generated Embed --> 
+        <div class='tableauPlaceholder' id='viz1536326153324' style='position: relative'><noscript><a href='#'><img alt='Joe DASH ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Hi&#47;HistoricalInvestmentinRDByCountry&#47;JoeDASH&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='HistoricalInvestmentinRDByCountry&#47;JoeDASH' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Hi&#47;HistoricalInvestmentinRDByCountry&#47;JoeDASH&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1536326153324');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='600px';vizElement.style.height='627px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        </p>
+        <p>
+        Sometimes the data doesn't require much visual trickery.  A lot can be done with just bars and lines.  But this wasn't standard Tableau formatting.  
+        I wanted the viz a certain width for the header text and source attribution.  That made the bars spaced too far (I felt) to be easily visually compared.  
+        So I played with the bar width to make sure my brain didn't work too hard seeing the slight increases in US spending.  
+        </p>
+        <p>
+        I would like the full data set, but this was enough for today's exercise.  
+        The ugly-viz blog got their data from <a href="http://uis.unesco.org/apps/visualisations/research-and-development-spending/">UNESCO</a>, and the full data is there.  
+        That may be a project for another day.  Check out the UNESCO--the animations are unnecessary, but the ultimate visualizations are pretty good.  
+        </div>
+
+        <div class="article">
         <a id="20180905nba"></a>
         <h3>2018.09.05 :: NBA Salaries Against the Cap (VizWiz Makeover Monday)</h3> 
         <p>
